[gd_scene load_steps=8 format=2]

[ext_resource path="res://GuessThePrice.gd" type="Script" id=1]
[ext_resource path="res://gfx/IndieFlower-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gfx/concrete-1646788_1920.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[node name="GuessThePrice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attempts" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 984.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Attempts : 0/20"
align = 2

[node name="PlayerDisplay" type="Label" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 984.0
margin_bottom = 279.0
rect_min_size = Vector2( 0, 151 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Try guessing the price
(10 -> 10000)"
align = 1
valign = 1

[node name="PlayerInput" type="LineEdit" parent="VBoxContainer"]
margin_top = 329.0
margin_right = 984.0
margin_bottom = 429.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
placeholder_text = "Type sumpthin hier !"
placeholder_alpha = 0.428

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 479.0
margin_right = 984.0
margin_bottom = 559.0
rect_min_size = Vector2( 0, 80 )
custom_constants/separation = 50
alignment = 1

[node name="Replay" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 467.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
custom_fonts/font = SubResource( 3 )
text = "Replay"

[node name="Enter" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 517.0
margin_right = 717.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
custom_fonts/font = SubResource( 3 )
text = "Enter"
[connection signal="text_entered" from="VBoxContainer/PlayerInput" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Enter" to="." method="_on_Enter_pressed"]
